FIX maps spacing & default outline

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -613,6 +613,10 @@ h1 {
   border-top-right-radius: 1rem !important;
   /*top: 10px !important;
   right: 10px !important;*/
+
+  &:focus-visible {
+    outline: none;
+  }
 }
 
 .wiggle {
